# terra

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: clear.wgsl  generator.wgsl  terrain.wgsl  triangle.wgsl
include/: application.hpp  renderer.hpp  terrain.hpp  triangle.hpp  window.hpp
include/camera/: camera.hpp  controller.hpp  projection.hpp  view.hpp
include/renderer/: adapter.hpp  buffer.hpp  layout.hpp  program.hpp  renderer.hpp  shader.hpp  texture.hpp  uniform.hpp
src/: application.cpp  main.cpp  renderer.cpp  terrain.cpp  triangle.cpp  window.cpp
src/camera/: camera.cpp  controller.cpp  projection.cpp  view.cpp
src/renderer/: adapter.cpp  program.cpp  renderer.cpp  shader.cpp  texture.cpp
